--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "files.encoding": "utf8",
   "files.eol": "\n",
   "editor.defaultFormatter": null,
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
   "editor.suggest.showFolders": true,
   "editor.bracketPairColorization.enabled": true,
   "editor.stickyScroll.enabled": true,
@@ -26,13 +26,19 @@
     "editor.tabSize": 2,
     "editor.defaultFormatter": null
   },
-  "[json]": {
-    "editor.defaultFormatter": "vscode.json-language-features"
-  },
   "[yaml]": {
-    "editor.formatOnSave": false,
+    "editor.formatOnSave": true,
     "editor.insertSpaces": true,
     "editor.detectIndentation": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.formatOnSave": true,
+    "editor.insertSpaces": true,
+    "editor.tabSize": 2,
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[dockerfile]": {
+    "editor.defaultFormatter": "ms-azuretools.vscode-containers"
   }
 }
