--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,13 @@
+# https://editorConfig.org
+
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+max_line_length = 120
 trim_trailing_whitespace = true
-max_line_length = 100
 
 [*.sh]
 indent_style = space
@@ -20,8 +22,8 @@ binary_next_line = false   # like -bn
 [*.md]
 indent_style = space
 indent_size = 2
+max_line_length = off
 trim_trailing_whitespace = false
-max_line_length = 0
 
 [*.{yml,yaml}]
 indent_style = space
@@ -41,3 +43,13 @@ max_line_length = 0
 indent_style = space
 indent_size = 4
 max_line_length = 88
+
+[*.rego]
+end_of_line = lf
+insert_final_newline = true
+charset = utf-8
+indent_style = tab
+indent_size = 4
+
+[Makefile]
+indent_style = tab
